welcome.lessons.welcome.bdr.BDR.scala.code
var x:Int=0   //pour stopper le programme ? un moment
  

  
while (x!=0){
  
if (getIndication()=='R'){
  droite();
  avance();
}  
  
if (getIndication()=='L'){
  gauche();
  avance();
}
  
if (getIndication()=='I'){
  droite();
  droite();
  avance();
}
  
  
if (getIndication()=='A'){
  avance();
  
}
  
if (getIndication()=='B'){
  avance();
  avance();
}
  
if (getIndication()=='C'){
  avance();
  avance();
  avance();
}
  
if (getIndication()=='Z'){
  recule();
  
}
  
if (getIndication()=='Y'){
  recule();
  recule();
}
  
if (getIndication()=='X'){
  recule();
  recule();
  recule();
}
  
  
else if{
  x=0
}  
}  
  
  